# apiadapters

./: .gitmodules  pyproject.toml  requirements.txt
src/apiadapters/: __init__.py  apiadapters.py
src/apiadapters/lpsn_interface/: config.py  config.toml  lpsn_interface.py
src/apiadapters/ncbi/: __init__.py  ncbi.py  taxonomy.py
src/apiadapters/straininfo/: __init__.py  straininfo.py
tests/: conftest.py  pmc_365027.xml  pmc_365027_abstract.xml  pmc_365027_body.xml  test_apiadapters.py  test_ncbi.py  test_ncbi_integration.py  test_parser.py  test_straininfo.py  test_straininfo_integration.py  test_taxonomy.py
