[project]
name = "apiadapters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "httpx>=0.28.1",
    "loggers",
    "lxml>=5.3.2",
    "xmlparser",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
loggers = { git = "ssh://git@github.com/manuquadros/loggers.git" }
xmlparser = { git = "ssh://git@github.com/manuquadros/xmlparser.git" }
