[project]
name = "apiadapters"
version = "0.1.0"
description = "API adapters for services external and internal to D3"
readme = "README.md"
requires-python = ">=3.12, <4"
license = "GPL-3.0-or-later"
dependencies = [
  "cacheout>=0.16.0",
  "d3types",
  "httpx>=0.28.1",
  "loggers",
  "lxml>=5.3.2",
  "pandas>=2.3.2",
  "xmlparser",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
loggers = { git = "ssh://git@github.com/manuquadros/loggers.git" }
xmlparser = { git = "ssh://git@github.com/manuquadros/xmlparser.git" }
d3types = { git = "ssh://git@github.com/manuquadros/d3types.git" }
