[project]
name = "apiadapters"
version = "0.1.0"
description = "API adapters for services external and internal to D3"
readme = "README.md"
requires-python = ">=3.12, <4"
license = "GPL-3.0-or-later"
dependencies = [
  "cacheout>=0.16.0",
  "pydantic>=2.0",
  "d3types @ git+https://github.com/manuquadros/d3types.git",
  "httpx>=0.28.1",
  "lxml>=5.3.2",
  "pandas>=2.3.2",
  "xmlparser @ git+https://github.com/manuquadros/xmlparser.git",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "mypy>=1.20.2",
    "lxml-stubs>=0.5.1",
    "pandas-stubs>=3.0.0.260204",
    "pylint>=4.0.5",
]
